Fix hero on small

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -55,19 +55,20 @@ a {
 
 @media screen and (max-width: 960px) {
   .hero {
-    height: 75vh;
-    .services {
-      max-width: 410px;
+    height: auto;
+    .services ul {
+      display: block;
+      padding: 20px 0 40px;
       margin: 0 auto;
-    }
-  }
-  .hero .services ul {
-    margin-top: -30px;
-    grid-template-columns: 1fr;
-    font-size: 1.2rem;
-    gap: 0px;
-    span {
-      font-size: 2.2rem;
+      max-width: 394px;
+      font-size: 1.2rem;
+      span {
+        font-size: 1.1rem;
+      }
+      line-height: 1.1;
+      li {
+        margin-bottom: 1rem;
+      }
     }
   }
 }
